--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,11 @@
 title: The Despair Lair
 email: info@fprzg.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog about programming and tech.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "blog.fprzg.net" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: fprzg
+github_username:  n3cr0k4n1n4
 
 # Build settings
 theme: minima
