--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Blog about programming and technology.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "blog.fprzg.net" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: n3cr0k4n1n4
+twitter_username: fprzg
 github_username:  fprzg
 
 # Build settings
